# libB

./: CMakeLists.txt  Jenkinsfile  conanfile.py  dependent-projects.txt
src/: libB.cpp
